--- a/project/app.yaml
+++ b/project/app.yaml
@@ -1,6 +1,9 @@
-runtime: python27
-api_version: 1
-threadsafe: true
+runtime: python
+env: flex
+entrypoint: gunicorn -b :$PORT server:app
+
+runtime_config:
+        python_version: 3
 
 #START HANDLERS
 handlers:
@@ -10,7 +13,3 @@ handlers:
   script: server.app
 #END HANDLERS
 
-#START LIBRARIES
-libraries:
-- name : ssl
-  version: latest
