--- a/project/app.yaml
+++ b/project/app.yaml
@@ -9,6 +9,8 @@ runtime_config:
 handlers:
 - url : /static
   static_dir: static
+- url: /closure
+  static_dir: static/closure-library
 - url: /.*
   script: server.app
 #END HANDLERS
